--- a/public/index.html
+++ b/public/index.html
@@ -1,370 +1,417 @@
 <!DOCTYPE html>
-<html lang="en">
-	<head>
-		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>FlashQuest WebGL</title>
-		<style>
-			body {
-				margin: 0;
-				padding: 20px;
-				background: #1a1a1a;
-				font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-				color: white;
-			}
-	
+<html lang="pt-BR">
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>SWF Renderer - Renderizador de Flash Perfeito</title>
+	<style>
+		* {
+			margin: 0;
+			padding: 0;
+			box-sizing: border-box;
+		}
+
+		body {
+			font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+			background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+			min-height: 100vh;
+			padding: 20px;
+		}
+
+		.container {
+			max-width: 1200px;
+			margin: 0 auto;
+			background: white;
+			border-radius: 15px;
+			box-shadow: 0 20px 40px rgba(0,0,0,0.1);
+			overflow: hidden;
+		}
+
+		.header {
+			background: linear-gradient(135deg, #ff6b6b 0%, #ee5a24 100%);
+			color: white;
+			padding: 30px;
+			text-align: center;
+		}
+
+		.header h1 {
+			font-size: 2.5em;
+			margin-bottom: 10px;
+			text-shadow: 2px 2px 4px rgba(0,0,0,0.3);
+		}
+
+		.header p {
+			font-size: 1.2em;
+			opacity: 0.9;
+		}
+
+		.content {
+			padding: 40px;
+		}
+
+		.upload-area {
+			border: 3px dashed #ddd;
+			border-radius: 10px;
+			padding: 40px;
+			text-align: center;
+			margin-bottom: 30px;
+			transition: all 0.3s ease;
+			cursor: pointer;
+		}
+
+		.upload-area:hover {
+			border-color: #667eea;
+			background: #f8f9ff;
+		}
+
+		.upload-area.dragover {
+			border-color: #667eea;
+			background: #e3f2fd;
+			transform: scale(1.02);
+		}
+
+		.upload-icon {
+			font-size: 4em;
+			color: #ddd;
+			margin-bottom: 20px;
+		}
+
+		.upload-text {
+			font-size: 1.3em;
+			color: #666;
+			margin-bottom: 15px;
+		}
+
+		.upload-hint {
+			color: #999;
+			font-size: 0.9em;
+		}
+
+		.file-input {
+			display: none;
+		}
+
+		.btn {
+			background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+			color: white;
+			border: none;
+			padding: 12px 30px;
+			border-radius: 25px;
+			font-size: 1em;
+			cursor: pointer;
+			transition: all 0.3s ease;
+			margin: 10px;
+		}
+
+		.btn:hover {
+			transform: translateY(-2px);
+			box-shadow: 0 10px 20px rgba(0,0,0,0.2);
+		}
+
+		.canvas-container {
+			text-align: center;
+			margin: 30px 0;
+			padding: 20px;
+			background: #f8f9fa;
+			border-radius: 10px;
+		}
+
+		#swf-canvas {
+			max-width: 100%;
+			height: auto;
+			border: 2px solid #ddd;
+			border-radius: 8px;
+			box-shadow: 0 10px 30px rgba(0,0,0,0.1);
+		}
+
+		.info-panel {
+			background: #f8f9fa;
+			border-radius: 10px;
+			padding: 20px;
+			margin: 20px 0;
+			display: none;
+		}
+
+		.info-panel.visible {
+			display: block;
+		}
+
+		.info-grid {
+			display: grid;
+			grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+			gap: 15px;
+		}
+
+		.info-item {
+			background: white;
+			padding: 15px;
+			border-radius: 8px;
+			border-left: 4px solid #667eea;
+		}
+
+		.info-label {
+			font-weight: bold;
+			color: #333;
+			margin-bottom: 5px;
+		}
+
+		.info-value {
+			color: #666;
+			font-size: 1.1em;
+		}
+
+		.status {
+			padding: 15px;
+			border-radius: 8px;
+			margin: 15px 0;
+			display: none;
+		}
+
+		.status.visible {
+			display: block;
+		}
+
+		.status.loading {
+			background: #e3f2fd;
+			color: #1976d2;
+			border-left: 4px solid #2196f3;
+		}
+
+		.status.success {
+			background: #e8f5e8;
+			color: #2e7d32;
+			border-left: 4px solid #4caf50;
+		}
+
+		.status.error {
+			background: #ffebee;
+			color: #c62828;
+			border-left: 4px solid #f44336;
+		}
+
+		.features {
+			display: grid;
+			grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+			gap: 20px;
+			margin: 30px 0;
+		}
+
+		.feature {
+			background: white;
+			padding: 25px;
+			border-radius: 10px;
+			text-align: center;
+			box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+			transition: transform 0.3s ease;
+		}
+
+		.feature:hover {
+			transform: translateY(-5px);
+		}
+
+		.feature-icon {
+			font-size: 3em;
+			margin-bottom: 15px;
+		}
+
+		.feature h3 {
+			color: #333;
+			margin-bottom: 10px;
+		}
+
+		.feature p {
+			color: #666;
+			line-height: 1.6;
+		}
+
+		@media (max-width: 768px) {
 			.container {
-				max-width: 1200px;
-				margin: 0 auto;
+				margin: 10px;
+				border-radius: 10px;
 			}
-	
-			.header {
-				text-align: center;
-				margin-bottom: 30px;
-			}
-	
-			.header h1 {
-				background: linear-gradient(45deg, #ff6b35, #f7931e);
-				-webkit-background-clip: text;
-				-webkit-text-fill-color: transparent;
-				background-clip: text;
-				font-size: 2.5em;
-				margin-bottom: 10px;
-			}
-	
-			.controls {
-				display: flex;
-				gap: 15px;
-				align-items: center;
-				justify-content: center;
-				margin-bottom: 30px;
-				flex-wrap: wrap;
-			}
-	
-			.file-input {
-				position: relative;
-				overflow: hidden;
-				display: inline-block;
-			}
-	
-			.file-input input[type=file] {
-				position: absolute;
-				left: -9999px;
-			}
-	
-			.file-input label {
-				background: linear-gradient(45deg, #667eea 0%, #764ba2 100%);
-				color: white;
-				padding: 12px 24px;
-				border-radius: 8px;
-				cursor: pointer;
-				transition: all 0.3s ease;
-				display: inline-block;
-				font-weight: 500;
-			}
-	
-			.file-input label:hover {
-				transform: translateY(-2px);
-				box-shadow: 0 8px 25px rgba(102, 126, 234, 0.3);
-			}
-	
-			.url-input {
-				display: flex;
-				gap: 10px;
-				align-items: center;
-			}
-	
-			.url-input input {
-				padding: 12px 16px;
-				border: 2px solid #333;
-				background: #2a2a2a;
-				color: white;
-				border-radius: 8px;
-				width: 300px;
-				font-size: 14px;
-			}
-	
-			.url-input input:focus {
-				outline: none;
-				border-color: #667eea;
-				box-shadow: 0 0 0 3px rgba(102, 126, 234, 0.1);
-			}
-	
-			.btn {
-				background: linear-gradient(45deg, #667eea 0%, #764ba2 100%);
-				color: white;
-				border: none;
-				padding: 12px 24px;
-				border-radius: 8px;
-				cursor: pointer;
-				font-weight: 500;
-				transition: all 0.3s ease;
-			}
-	
-			.btn:hover {
-				transform: translateY(-2px);
-				box-shadow: 0 8px 25px rgba(102, 126, 234, 0.3);
-			}
-	
-			.canvas-container {
-				display: flex;
-				justify-content: center;
-				margin-bottom: 30px;
-			}
-	
-			#flashquest-canvas {
-				border: 2px solid #333;
-				border-radius: 12px;
-				box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
-				background: #000;
-			}
-	
-			.info-panel {
-				background: linear-gradient(135deg, #2d3748 0%, #1a202c 100%);
-				border-radius: 12px;
+
+			.content {
 				padding: 20px;
-				margin-top: 20px;
-				border: 1px solid #4a5568;
 			}
-	
-			.info-grid {
-				display: grid;
-				grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-				gap: 15px;
+
+			.header h1 {
+				font-size: 2em;
 			}
-	
-			.info-item {
-				background: rgba(255, 255, 255, 0.05);
-				padding: 15px;
-				border-radius: 8px;
-				border: 1px solid rgba(255, 255, 255, 0.1);
+
+			.upload-area {
+				padding: 20px;
 			}
-	
-			.info-label {
-				font-size: 12px;
-				color: #a0aec0;
-				text-transform: uppercase;
-				letter-spacing: 0.5px;
-				margin-bottom: 5px;
-			}
-	
-			.info-value {
-				font-size: 16px;
-				font-weight: 600;
-				color: white;
-			}
-	
-			.status {
-				text-align: center;
-				padding: 15px;
-				border-radius: 8px;
-				margin: 20px 0;
-				font-weight: 500;
-			}
-	
-			.status.loading {
-				background: linear-gradient(45deg, #667eea, #764ba2);
-				color: white;
-			}
-	
-			.status.error {
-				background: linear-gradient(45deg, #ff6b6b, #ee5a52);
-				color: white;
-			}
-	
-			.status.success {
-				background: linear-gradient(45deg, #51cf66, #40c057);
-				color: white;
-			}
-	
-			.hidden {
-				display: none;
-			}
-	
-			.playback-controls {
-				display: flex;
-				justify-content: center;
-				gap: 10px;
-				margin-top: 20px;
-			}
-	
-			.playback-controls button {
-				background: rgba(255, 255, 255, 0.1);
-				border: 1px solid rgba(255, 255, 255, 0.2);
-				color: white;
-				padding: 8px 16px;
-				border-radius: 6px;
-				cursor: pointer;
-				transition: all 0.3s ease;
-			}
-	
-			.playback-controls button:hover {
-				background: rgba(255, 255, 255, 0.2);
-			}
-	
-			.playback-controls button:disabled {
-				opacity: 0.5;
-				cursor: not-allowed;
-			}
-		</style>
-	</head>
-	<body>
-		<div class="container">
-			<div class="header">
-				<h1>FlashQuest WebGL</h1>
-				<p>Render SWF files using WebGL</p>
-			</div>
-		
-			<div class="controls">
-				<div class="file-input">
-					<input type="file" id="file-input" accept=".swf">
-					<label for="file-input">📁 Choose SWF File</label>
+		}
+	</style>
+</head>
+<body>
+<div class="container">
+	<div class="header">
+		<h1>🎬 SWF Renderer</h1>
+		<p>Renderizador de Flash Perfeito com WebGL</p>
+	</div>
+
+	<div class="content">
+		<div class="upload-area" id="uploadArea">
+			<div class="upload-icon">📁</div>
+			<div class="upload-text">Arraste um arquivo SWF aqui</div>
+			<div class="upload-hint">ou clique para selecionar</div>
+			<input type="file" class="file-input" id="fileInput" accept=".swf">
+		</div>
+
+		<div class="status" id="status"></div>
+
+		<div class="canvas-container">
+			<canvas id="swf-canvas" width="800" height="600"></canvas>
+		</div>
+
+		<div class="info-panel" id="infoPanel">
+			<h3 style="margin-bottom: 20px; color: #333;">📊 Informações do Arquivo</h3>
+			<div class="info-grid">
+				<div class="info-item">
+					<div class="info-label">Versão SWF</div>
+					<div class="info-value" id="swfVersion">-</div>
 				</div>
-		
-				<div class="url-input">
-					<input type="text" id="url-input" placeholder="https://example.com/file.swf" value="">
-					<button class="btn" id="load-url">🌐 Load URL</button>
+				<div class="info-item">
+					<div class="info-label">Dimensões</div>
+					<div class="info-value" id="swfDimensions">-</div>
 				</div>
-			</div>
-		
-			<div id="status" class="status hidden"></div>
-		
-			<div class="canvas-container">
-				<canvas id="flashquest-canvas" width="800" height="600"></canvas>
-			</div>
-		
-			<div class="playback-controls">
-				<button id="play-btn">▶️ Play</button>
-				<button id="pause-btn">⏸️ Pause</button>
-				<button id="stop-btn">⏹️ Stop</button>
-				<button id="restart-btn">🔄 Restart</button>
-			</div>
-		
-			<div id="info-panel" class="info-panel hidden">
-				<h3>SWF Information</h3>
-				<div class="info-grid">
-					<div class="info-item">
-						<div class="info-label">Version</div>
-						<div class="info-value" id="swf-version">-</div>
-					</div>
-					<div class="info-item">
-						<div class="info-label">Dimensions</div>
-						<div class="info-value" id="swf-dimensions">-</div>
-					</div>
-					<div class="info-item">
-						<div class="info-label">Frame Rate</div>
-						<div class="info-value" id="swf-framerate">-</div>
-					</div>
-					<div class="info-item">
-						<div class="info-label">Total Frames</div>
-						<div class="info-value" id="swf-frames">-</div>
-					</div>
-					<div class="info-item">
-						<div class="info-label">Current Frame</div>
-						<div class="info-value" id="current-frame">-</div>
-					</div>
-					<div class="info-item">
-						<div class="info-label">Total Tags</div>
-						<div class="info-value" id="total-tags">-</div>
-					</div>
+				<div class="info-item">
+					<div class="info-label">Frame Rate</div>
+					<div class="info-value" id="swfFrameRate">-</div>
+				</div>
+				<div class="info-item">
+					<div class="info-label">Total de Frames</div>
+					<div class="info-value" id="swfFrames">-</div>
 				</div>
 			</div>
 		</div>
-		<script type="module" src="./js/app.js?ddd"></script>
-		
-		<script>
-			var flashQuest;
-		
-			function showStatus(message, type) {
-				const status = document.getElementById('status');
-				status.textContent = message;
-				status.className = `status ${type}`;
-				status.classList.remove('hidden');
-		
-				if (type === 'success') {
-					setTimeout(() => status.classList.add('hidden'), 3000);
-				}
-			}
-		
-			document.addEventListener('DOMContentLoaded', () => {
-				const canvas = document.getElementById('flashquest-canvas');
-				if (!canvas) {
-					console.error('Canvas not found');
-					return;
-				}
-		
-				flashQuest = new FlashQuest(canvas);
-		
-				// File input handler
-				document.getElementById('file-input').addEventListener('change', async (e) => {
-					const file = e.target.files[0];
-		
-					if (file) {
-						await flashQuest.load(file);
-					}
-				});
-		
-				// URL input handler
-				document.getElementById('load-url').addEventListener('click', async () => {
-					const url = document.getElementById('url-input').value.trim();
-		
-					if (url) {
-						await flashQuest.load(url);
-					}
-				});
-		
-				document.getElementById('play-btn').addEventListener('click', () => flashQuest.play());
-		
-				document.getElementById('pause-btn').addEventListener('click', () => flashQuest.pause());
-		
-				document.getElementById('stop-btn').addEventListener('click', () => flashQuest.stop());
-		
-				document.getElementById('restart-btn').addEventListener('click', () => flashQuest.restart());
-		
-				document.getElementById('url-input').addEventListener('keypress', async (e) => {
-					if (e.key === 'Enter') {
-						const url = e.target.value.trim();
-		
-						if (url) {
-							await flashQuest.load(url);
+
+		<div class="features">
+			<div class="feature">
+				<div class="feature-icon">⚡</div>
+				<h3>Renderização WebGL</h3>
+				<p>Utiliza WebGL para renderização acelerada por hardware, garantindo performance máxima</p>
+			</div>
+			<div class="feature">
+				<div class="feature-icon">🎨</div>
+				<h3>Formas Vetoriais</h3>
+				<p>Suporte completo para formas vetoriais, gradientes e transformações complexas</p>
+			</div>
+			<div class="feature">
+				<div class="feature-icon">🎬</div>
+				<h3>Animações Fluidas</h3>
+				<p>Reprodução suave de animações com controle preciso de timeline e frames</p>
+			</div>
+			<div class="feature">
+				<div class="feature-icon">🔧</div>
+				<h3>Parser Completo</h3>
+				<p>Parser SWF completo que suporta todas as tags principais e recursos avançados</p>
+			</div>
+		</div>
+	</div>
+</div>
+
+<script>
+	// Configuração da interface
+	const uploadArea = document.getElementById('uploadArea');
+	const fileInput = document.getElementById('fileInput');
+	const status = document.getElementById('status');
+	const infoPanel = document.getElementById('infoPanel');
+
+	function showStatus(message, type) {
+		status.textContent = message;
+		status.className = `status visible ${type}`;
+
+		if (type === 'success') {
+			setTimeout(() => {
+				status.classList.remove('visible');
+			}, 3000);
+		}
+	}
+
+	function updateInfo(info) {
+		document.getElementById('swfVersion').textContent = info.version || '-';
+		document.getElementById('swfDimensions').textContent = info.dimensions || '-';
+		document.getElementById('swfFrameRate').textContent = info.frameRate || '-';
+		document.getElementById('swfFrames').textContent = info.frames || '-';
+		infoPanel.classList.add('visible');
+	}
+
+	// Upload de arquivo
+	uploadArea.addEventListener('click', () => fileInput.click());
+
+	uploadArea.addEventListener('dragover', (e) => {
+		e.preventDefault();
+		uploadArea.classList.add('dragover');
+	});
+
+	uploadArea.addEventListener('dragleave', () => {
+		uploadArea.classList.remove('dragover');
+	});
+
+	uploadArea.addEventListener('drop', async (e) => {
+		e.preventDefault();
+		uploadArea.classList.remove('dragover');
+
+		const files = e.dataTransfer.files;
+		if (files.length > 0) {
+			await handleFile(files[0]);
+		}
+	});
+
+	fileInput.addEventListener('change', async (e) => {
+		if (e.target.files.length > 0) {
+			await handleFile(e.target.files[0]);
+		}
+	});
+
+	async function handleFile(file) {
+		if (!file.name.toLowerCase().endsWith('.swf')) {
+			showStatus('Por favor, selecione um arquivo .swf', 'error');
+			return;
+		}
+
+		try {
+			showStatus('Carregando arquivo SWF...', 'loading');
+
+			// Aguardar o SWFRenderer estar disponível
+			if (typeof window.swfRenderer === 'undefined') {
+				showStatus('Aguardando carregamento do renderizador...', 'loading');
+				await new Promise(resolve => {
+					const checkRenderer = () => {
+						if (window.swfRenderer) {
+							resolve();
+						} else {
+							setTimeout(checkRenderer, 100);
 						}
-					}
+					};
+					checkRenderer();
 				});
-		
-				const defaultUrl = document.getElementById('url-input').value;
-		
-				if (defaultUrl) {
-					setTimeout(() => {
-						console.log('Loading default URL:', defaultUrl);
-						flashQuest.load(defaultUrl);
-					}, 500);
-				}
-		
-				console.log('FlashQuest initialized. Use debugLoadSwf() in console if needed.');
-		
-				canvas.addEventListener('dragover', (e) => {
-					e.preventDefault();
-					canvas.style.border = '3px dashed #667eea';
-				});
-		
-				canvas.addEventListener('dragleave', () => {
-					canvas.style.border = '2px solid #333';
-				});
-		
-				canvas.addEventListener('drop', async (e) => {
-					e.preventDefault();
-					canvas.style.border = '2px solid #333';
-		
-					const files = Array.from(e.dataTransfer.files);
-					const swfFile = files.find(file => file.name.toLowerCase().endsWith('.swf'));
-		
-					if (swfFile) {
-						await flashQuest.load(swfFile);
-					} else {
-						showStatus('Please drop a .swf file', 'error');
-					}
-				});
+			}
+
+			await window.swfRenderer.loadSWF(file);
+
+			showStatus(`Arquivo "${file.name}" carregado com sucesso!`, 'success');
+
+			// Atualizar informações (simulado por enquanto)
+			updateInfo({
+				version: 'Detectando...',
+				dimensions: `${window.swfRenderer.canvas?.width || 800}x${window.swfRenderer.canvas?.height || 600}`,
+				frameRate: 'Detectando...',
+				frames: window.swfRenderer.getTotalFrames?.() || 'Detectando...'
 			});
-		</script>
-	</body>
+
+		} catch (error) {
+			console.error('Erro ao carregar SWF:', error);
+			showStatus(`Erro ao carregar arquivo: ${error.message}`, 'error');
+		}
+	}
+
+	// Mostrar informações iniciais
+	console.log('🎬 SWF Renderer inicializado!');
+	console.log('📁 Arraste um arquivo SWF para começar');
+</script>
+</body>
 </html>
+
