--- a/public/index.html
+++ b/public/index.html
@@ -61,13 +61,12 @@
 
 		.upload-area:hover {
 			border-color: #667eea;
-			background: #f8f9ff;
+			background-color: #f8f9ff;
 		}
 
 		.upload-area.dragover {
 			border-color: #667eea;
-			background: #e3f2fd;
-			transform: scale(1.02);
+			background-color: #f0f4ff;
 		}
 
 		.upload-icon {
@@ -91,37 +90,32 @@
 			display: none;
 		}
 
-		.btn {
+		.upload-btn {
 			background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
 			color: white;
 			border: none;
 			padding: 12px 30px;
 			border-radius: 25px;
-			font-size: 1em;
+			font-size: 16px;
 			cursor: pointer;
-			transition: all 0.3s ease;
-			margin: 10px;
+			transition: transform 0.2s ease;
 		}
 
-		.btn:hover {
+		.upload-btn:hover {
 			transform: translateY(-2px);
-			box-shadow: 0 10px 20px rgba(0,0,0,0.2);
 		}
 
 		.canvas-container {
 			text-align: center;
-			margin: 30px 0;
-			padding: 20px;
-			background: #f8f9fa;
-			border-radius: 10px;
+			margin: 20px 0;
 		}
 
 		#swf-canvas {
-			max-width: 100%;
-			height: auto;
 			border: 2px solid #ddd;
 			border-radius: 8px;
-			box-shadow: 0 10px 30px rgba(0,0,0,0.1);
+			box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+			max-width: 100%;
+			height: auto;
 		}
 
 		.info-panel {
@@ -193,25 +187,14 @@
 			display: grid;
 			grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
 			gap: 20px;
-			margin: 30px 0;
+			margin-top: 30px;
 		}
 
 		.feature {
-			background: white;
-			padding: 25px;
+			background: #f8f9fa;
+			padding: 20px;
 			border-radius: 10px;
 			text-align: center;
-			box-shadow: 0 5px 15px rgba(0,0,0,0.1);
-			transition: transform 0.3s ease;
-		}
-
-		.feature:hover {
-			transform: translateY(-5px);
-		}
-
-		.feature-icon {
-			font-size: 3em;
-			margin-bottom: 15px;
 		}
 
 		.feature h3 {
@@ -222,6 +205,45 @@
 		.feature p {
 			color: #666;
 			line-height: 1.6;
+		}
+
+		.loading {
+			display: none;
+			text-align: center;
+			padding: 20px;
+		}
+
+		.spinner {
+			border: 4px solid #f3f3f3;
+			border-top: 4px solid #667eea;
+			border-radius: 50%;
+			width: 40px;
+			height: 40px;
+			animation: spin 1s linear infinite;
+			margin: 0 auto 10px;
+		}
+
+		@keyframes spin {
+			0% { transform: rotate(0deg); }
+			100% { transform: rotate(360deg); }
+		}
+
+		.error {
+			background: #ffe6e6;
+			color: #d63031;
+			padding: 15px;
+			border-radius: 8px;
+			margin: 20px 0;
+			display: none;
+		}
+
+		.success {
+			background: #e6ffe6;
+			color: #00b894;
+			padding: 15px;
+			border-radius: 8px;
+			margin: 20px 0;
+			display: none;
 		}
 
 		@media (max-width: 768px) {
@@ -245,173 +267,151 @@
 	</style>
 </head>
 <body>
-<div class="container">
-	<div class="header">
-		<h1>🎬 SWF Renderer</h1>
-		<p>Renderizador de Flash Perfeito com WebGL</p>
-	</div>
-
-	<div class="content">
-		<div class="upload-area" id="uploadArea">
-			<div class="upload-icon">📁</div>
-			<div class="upload-text">Arraste um arquivo SWF aqui</div>
-			<div class="upload-hint">ou clique para selecionar</div>
-			<input type="file" class="file-input" id="fileInput" accept=".swf">
+	<div class="container">
+		<div class="header">
+			<h1>🎬 SWF Renderer</h1>
+			<p>Renderizador de Flash moderno e perfeito</p>
 		</div>
 
-		<div class="status" id="status"></div>
+		<div class="content">
+			<div class="upload-area" onclick="document.getElementById('fileInput').click()">
+				<h3>📁 Arraste um arquivo SWF aqui ou clique para selecionar</h3>
+				<p>Suporte para arquivos SWF comprimidos e não comprimidos</p>
+				<button class="upload-btn" type="button">Selecionar Arquivo SWF</button>
+				<input type="file" id="fileInput" class="file-input" accept=".swf" />
+			</div>
 
-		<div class="canvas-container">
-			<canvas id="swf-canvas" width="800" height="600"></canvas>
-		</div>
+			<div class="loading" id="loading">
+				<div class="spinner"></div>
+				<p>Carregando e processando arquivo SWF...</p>
+			</div>
 
-		<div class="info-panel" id="infoPanel">
-			<h3 style="margin-bottom: 20px; color: #333;">📊 Informações do Arquivo</h3>
-			<div class="info-grid">
-				<div class="info-item">
-					<div class="info-label">Versão SWF</div>
-					<div class="info-value" id="swfVersion">-</div>
-				</div>
-				<div class="info-item">
-					<div class="info-label">Dimensões</div>
-					<div class="info-value" id="swfDimensions">-</div>
-				</div>
-				<div class="info-item">
-					<div class="info-label">Frame Rate</div>
-					<div class="info-value" id="swfFrameRate">-</div>
-				</div>
-				<div class="info-item">
-					<div class="info-label">Total de Frames</div>
-					<div class="info-value" id="swfFrames">-</div>
-				</div>
-			</div>
-		</div>
+			<div class="error" id="error"></div>
+			<div class="success" id="success"></div>
 
-		<div class="features">
-			<div class="feature">
-				<div class="feature-icon">⚡</div>
-				<h3>Renderização WebGL</h3>
-				<p>Utiliza WebGL para renderização acelerada por hardware, garantindo performance máxima</p>
+			<div class="canvas-container">
+				<canvas id="swf-canvas" width="800" height="600"></canvas>
 			</div>
-			<div class="feature">
-				<div class="feature-icon">🎨</div>
-				<h3>Formas Vetoriais</h3>
-				<p>Suporte completo para formas vetoriais, gradientes e transformações complexas</p>
-			</div>
-			<div class="feature">
-				<div class="feature-icon">🎬</div>
-				<h3>Animações Fluidas</h3>
-				<p>Reprodução suave de animações com controle preciso de timeline e frames</p>
-			</div>
-			<div class="feature">
-				<div class="feature-icon">🔧</div>
-				<h3>Parser Completo</h3>
-				<p>Parser SWF completo que suporta todas as tags principais e recursos avançados</p>
+
+			<div class="features">
+				<div class="feature">
+					<h3>🎨 Renderização WebGL</h3>
+					<p>Utiliza WebGL para renderização de alta performance com suporte a gradientes e transformações</p>
+				</div>
+				<div class="feature">
+					<h3>📐 Vetores Precisos</h3>
+					<p>Renderiza formas vetoriais com triangulação ear-clipping para máxima fidelidade</p>
+				</div>
+				<div class="feature">
+					<h3>🎬 Animações Fluidas</h3>
+					<p>Reprodução de timeline com controles de play, pause, stop e navegação por frames</p>
+				</div>
+				<div class="feature">
+					<h3>🗜️ Compressão Zlib</h3>
+					<p>Suporte completo para arquivos SWF comprimidos (CWS) e não comprimidos (FWS)</p>
+				</div>
 			</div>
 		</div>
 	</div>
-</div>
 
-<script>
-	// Configuração da interface
-	const uploadArea = document.getElementById('uploadArea');
-	const fileInput = document.getElementById('fileInput');
-	const status = document.getElementById('status');
-	const infoPanel = document.getElementById('infoPanel');
+	<script src="dist/bundle.js"></script>
+	<script>
+		// Configurar drag and drop global
+		document.addEventListener('DOMContentLoaded', () => {
+			const uploadArea = document.querySelector('.upload-area');
+			const fileInput = document.getElementById('fileInput');
+			const loading = document.getElementById('loading');
+			const error = document.getElementById('error');
+			const success = document.getElementById('success');
 
-	function showStatus(message, type) {
-		status.textContent = message;
-		status.className = `status visible ${type}`;
-
-		if (type === 'success') {
-			setTimeout(() => {
-				status.classList.remove('visible');
-			}, 3000);
-		}
-	}
-
-	function updateInfo(info) {
-		document.getElementById('swfVersion').textContent = info.version || '-';
-		document.getElementById('swfDimensions').textContent = info.dimensions || '-';
-		document.getElementById('swfFrameRate').textContent = info.frameRate || '-';
-		document.getElementById('swfFrames').textContent = info.frames || '-';
-		infoPanel.classList.add('visible');
-	}
-
-	// Upload de arquivo
-	uploadArea.addEventListener('click', () => fileInput.click());
-
-	uploadArea.addEventListener('dragover', (e) => {
-		e.preventDefault();
-		uploadArea.classList.add('dragover');
-	});
-
-	uploadArea.addEventListener('dragleave', () => {
-		uploadArea.classList.remove('dragover');
-	});
-
-	uploadArea.addEventListener('drop', async (e) => {
-		e.preventDefault();
-		uploadArea.classList.remove('dragover');
-
-		const files = e.dataTransfer.files;
-		if (files.length > 0) {
-			await handleFile(files[0]);
-		}
-	});
-
-	fileInput.addEventListener('change', async (e) => {
-		if (e.target.files.length > 0) {
-			await handleFile(e.target.files[0]);
-		}
-	});
-
-	async function handleFile(file) {
-		if (!file.name.toLowerCase().endsWith('.swf')) {
-			showStatus('Por favor, selecione um arquivo .swf', 'error');
-			return;
-		}
-
-		try {
-			showStatus('Carregando arquivo SWF...', 'loading');
-
-			// Aguardar o SWFRenderer estar disponível
-			if (typeof window.swfRenderer === 'undefined') {
-				showStatus('Aguardando carregamento do renderizador...', 'loading');
-				await new Promise(resolve => {
-					const checkRenderer = () => {
-						if (window.swfRenderer) {
-							resolve();
-						} else {
-							setTimeout(checkRenderer, 100);
-						}
-					};
-					checkRenderer();
-				});
-			}
-
-			await window.swfRenderer.loadSWF(file);
-
-			showStatus(`Arquivo "${file.name}" carregado com sucesso!`, 'success');
-
-			// Atualizar informações (simulado por enquanto)
-			updateInfo({
-				version: 'Detectando...',
-				dimensions: `${window.swfRenderer.canvas?.width || 800}x${window.swfRenderer.canvas?.height || 600}`,
-				frameRate: 'Detectando...',
-				frames: window.swfRenderer.getTotalFrames?.() || 'Detectando...'
+			// Drag and drop handlers
+			['dragenter', 'dragover', 'dragleave', 'drop'].forEach(eventName => {
+				uploadArea.addEventListener(eventName, preventDefaults, false);
+				document.body.addEventListener(eventName, preventDefaults, false);
 			});
 
-		} catch (error) {
-			console.error('Erro ao carregar SWF:', error);
-			showStatus(`Erro ao carregar arquivo: ${error.message}`, 'error');
-		}
-	}
+			function preventDefaults(e) {
+				e.preventDefault();
+				e.stopPropagation();
+			}
 
-	// Mostrar informações iniciais
-	console.log('🎬 SWF Renderer inicializado!');
-	console.log('📁 Arraste um arquivo SWF para começar');
-</script>
+			['dragenter', 'dragover'].forEach(eventName => {
+				uploadArea.addEventListener(eventName, highlight, false);
+			});
+
+			['dragleave', 'drop'].forEach(eventName => {
+				uploadArea.addEventListener(eventName, unhighlight, false);
+			});
+
+			function highlight(e) {
+				uploadArea.classList.add('dragover');
+			}
+
+			function unhighlight(e) {
+				uploadArea.classList.remove('dragover');
+			}
+
+			uploadArea.addEventListener('drop', handleDrop, false);
+
+			function handleDrop(e) {
+				const dt = e.dataTransfer;
+				const files = dt.files;
+				handleFiles(files);
+			}
+
+			fileInput.addEventListener('change', (e) => {
+				handleFiles(e.target.files);
+			});
+
+			async function handleFiles(files) {
+				if (files.length === 0) return;
+
+				const file = files[0];
+				if (!file.name.toLowerCase().endsWith('.swf')) {
+					showError('Por favor, selecione um arquivo SWF válido.');
+					return;
+				}
+
+				try {
+					showLoading(true);
+					hideMessages();
+
+					// Verificar se o renderer global existe
+					if (window.swfRenderer) {
+						await window.swfRenderer.loadSWF(file);
+						showSuccess(`Arquivo ${file.name} carregado com sucesso!`);
+					} else {
+						throw new Error('Renderer não inicializado');
+					}
+				} catch (err) {
+					console.error('Erro ao carregar SWF:', err);
+					showError(`Erro ao carregar arquivo: ${err.message}`);
+				} finally {
+					showLoading(false);
+				}
+			}
+
+			function showLoading(show) {
+				loading.style.display = show ? 'block' : 'none';
+			}
+
+			function showError(message) {
+				error.textContent = message;
+				error.style.display = 'block';
+				success.style.display = 'none';
+			}
+
+			function showSuccess(message) {
+				success.textContent = message;
+				success.style.display = 'block';
+				error.style.display = 'none';
+			}
+
+			function hideMessages() {
+				error.style.display = 'none';
+				success.style.display = 'none';
+			}
+		});
+	</script>
 </body>
 </html>
-
